--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -668,11 +668,13 @@ CreatLeadScreen As screen:
                     ComboBox1 As combobox:
                         BorderColor: =RGBA(202, 202, 202, 1)
                         ChevronBackground: =RGBA(202, 202, 202, 1)
+                        ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
                         ChevronHoverFill: =RGBA(202, 202, 202, 1)
                         Default: =First(VarBuildingList)
                         DefaultSelectedItems: =First(VarBuildingList)
                         DisplayFields: =["cr02d_custname"]
                         Height: =50
+                        HoverFill: =RGBA(0, 0, 0, 0)
                         Items: =VarBuildingList
                         PressedColor: =RGBA(202, 202, 202, 1)
                         PressedFill: =RGBA(202, 202, 202, 1)
