--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -463,6 +463,7 @@ UnitScreen As screen:
                         DisplayFields: =["Value"]
                         HoverBorderColor: =//ColorFade(Self.BorderColor, 15%)
                         HoverFill: =RGBA(0, 0, 0, 0)
+                        InputTextPlaceholder: ="Select Job Origin/Situation"
                         Items: |-
                             =[
                                 "Vandalism",
