--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -665,7 +665,7 @@ CreatLeadScreen As screen:
                         Y: =10
                         ZIndex: =4
 
-                    ComboBox1 As combobox:
+                    cmbxBuildingName As combobox:
                         BorderColor: =RGBA(202, 202, 202, 1)
                         ChevronBackground: =RGBA(202, 202, 202, 1)
                         ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
@@ -679,7 +679,7 @@ CreatLeadScreen As screen:
                         PressedColor: =RGBA(202, 202, 202, 1)
                         PressedFill: =RGBA(202, 202, 202, 1)
                         SearchFields: =["cr02d_custname"]
-                        SearchItems: =Search(SHContractDetails,ComboBox1.SearchText,cr02d_custname)
+                        SearchItems: =Search(SHContractDetails,cmbxBuildingName.SearchText,cr02d_custname)
                         SelectionFill: =RGBA(202, 202, 202, 1)
                         SelectMultiple: =false
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
@@ -798,7 +798,7 @@ CreatLeadScreen As screen:
                             (LookUp(
                                 SHContractDetails,
                                 CONTR_NUM = IntxtContractNumber.Text
-                            ).CONTR_NUM <> IntxtContractNumber.Text || IsBlank(IntxtContractNumber.Text) || IsEmpty(ComboBox1.SelectedItems)),
+                            ).CONTR_NUM <> IntxtContractNumber.Text || IsBlank(IntxtContractNumber.Text) || IsEmpty(cmbxBuildingName.SelectedItems)),
                             Set(
                                 VarNotification,
                                 true
