--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -193,6 +193,77 @@ LeadSummaryScreen As screen:
                     Y: =4
                     ZIndex: =1
 
+                    JobOrigin_DataCard1 As typedDataCard.textualEditCard:
+                        BorderStyle: =BorderStyle.Solid
+                        DataField: ="shlrf_joborigin"
+                        Default: =ThisItem.JobOrigin
+                        DisplayMode: =Parent.DisplayMode
+                        DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,'shlrf_joborigin')
+                        Fill: =RGBA(0, 0, 0, 0)
+                        Height: =50
+                        MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, 'shlrf_joborigin')
+                        Required: =false
+                        Update: =DataCardValue1.Text
+                        Width: =Parent.Width
+                        X: =0
+                        Y: =6
+                        ZIndex: =1
+
+                        DataCardKey1 As label:
+                            AutoHeight: =true
+                            Height: =34
+                            Text: =Parent.DisplayName
+                            Width: =Parent.Width - 60
+                            Wrap: =false
+                            X: =30
+                            Y: =10
+                            ZIndex: =1
+
+                        DataCardValue1 As text:
+                            BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                            Default: =Parent.Default
+                            DelayOutput: =true
+                            DisplayMode: =Parent.DisplayMode
+                            MaxLength: =Parent.MaxLength
+                            PaddingLeft: =5
+                            RadiusBottomLeft: =0
+                            RadiusBottomRight: =0
+                            RadiusTopLeft: =0
+                            RadiusTopRight: =0
+                            Tooltip: =Parent.DisplayName
+                            Visible: =false
+                            Width: =Parent.Width - 60
+                            X: =30
+                            Y: =DataCardKey1.Y + DataCardKey1.Height + 5
+                            ZIndex: =2
+
+                        ComboBox2_1 As combobox:
+                            BorderColor: =RGBA(202, 202, 202, 1)
+                            ChevronBackground: =RGBA(202, 202, 202, 1)
+                            ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
+                            DisplayFields: =["Value"]
+                            HoverBorderColor: =//ColorFade(Self.BorderColor, 15%)
+                            HoverFill: =RGBA(0, 0, 0, 0)
+                            InputTextPlaceholder: ="Select Job Origin/Situation"
+                            Items: |-
+                                =[
+                                    "Vandalism",
+                                    "Power Disruption",
+                                    "Water Intrusion",
+                                    "Upgrade",
+                                    "Obsolescence"
+                                ]
+                            PressedFill: =RGBA(202, 202, 202, 1)
+                            SearchFields: =["Value"]
+                            SearchItems: =Search(["Vandalism","Power Disruption","Water Intrusion","Upgrade","Obsolescence"],ComboBox2_1.SearchText,Value)
+                            SelectionFill: =RGBA(202, 202, 202, 1)
+                            SelectMultiple: =false
+                            Tooltip: ="Select Job Origin/Situation"
+                            Width: =Parent.Width-60
+                            X: =30
+                            Y: =40
+                            ZIndex: =3
+
                     ContractNumberLSS As typedDataCard.textualEditCard:
                         BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
@@ -523,7 +594,7 @@ LeadSummaryScreen As screen:
                         Update: =CboxScopeLSS.Selected
                         Width: =Parent.Width
                         X: =0
-                        Y: =6
+                        Y: =7
                         ZIndex: =1
 
                         lblScopeLSS As label:
@@ -579,7 +650,7 @@ LeadSummaryScreen As screen:
                         Update: =CboxScopeofWorkLSS.Selected
                         Width: =Parent.Width
                         X: =0
-                        Y: =7
+                        Y: =8
                         ZIndex: =1
 
                         lblScopeofWorkLSS As label:
@@ -636,7 +707,7 @@ LeadSummaryScreen As screen:
                         Update: =IntxtManuallyScopeofWorkLSS.Text
                         Width: =Parent.Width
                         X: =0
-                        Y: =8
+                        Y: =9
                         ZIndex: =1
 
                         lblManuallyScopeofWorkLSS As label:
@@ -688,7 +759,7 @@ LeadSummaryScreen As screen:
                         Update: =IntxtEstimatedHoursLSS.Text
                         Width: =Parent.Width
                         X: =0
-                        Y: =9
+                        Y: =10
                         ZIndex: =1
 
                         lblEstimatedHoursLSS As label:
@@ -740,7 +811,7 @@ LeadSummaryScreen As screen:
                         Update: =IntxtNotesLSS.Text
                         Width: =Parent.Width
                         X: =0
-                        Y: =10
+                        Y: =11
                         ZIndex: =1
 
                         lblNotesLSS As label:
@@ -794,7 +865,7 @@ LeadSummaryScreen As screen:
                         Update: =UnitDownLSS.Default
                         Width: =Parent.Width
                         X: =0
-                        Y: =11
+                        Y: =12
                         ZIndex: =1
 
                         CboxUDLSS As checkbox:
@@ -828,7 +899,7 @@ LeadSummaryScreen As screen:
                         Update: =AdditionalExpensesRequiredLSS.Default
                         Width: =Parent.Width
                         X: =0
-                        Y: =12
+                        Y: =13
                         ZIndex: =1
 
                         cboxAELSS As checkbox:
@@ -870,7 +941,7 @@ LeadSummaryScreen As screen:
                         Visible: =VarAdditionExpense
                         Width: =Parent.Width
                         X: =0
-                        Y: =13
+                        Y: =14
                         ZIndex: =1
 
                         borderTotalExpenseLSS As rectangle:
@@ -931,7 +1002,7 @@ LeadSummaryScreen As screen:
                         Update: =TravelRequiredLSS.Default
                         Width: =Parent.Width
                         X: =0
-                        Y: =14
+                        Y: =15
                         ZIndex: =1
 
                         cboxTravelRequiredLSS As checkbox:
@@ -971,7 +1042,7 @@ LeadSummaryScreen As screen:
                         Visible: =VarTravel
                         Width: =Parent.Width
                         X: =0
-                        Y: =15
+                        Y: =16
                         ZIndex: =1
 
                         borderTotalEstimatedHoursTravelLSS As rectangle:
@@ -1032,7 +1103,7 @@ LeadSummaryScreen As screen:
                         Update: =CommunicatedtoCustomerLSS.Default
                         Width: =Parent.Width
                         X: =0
-                        Y: =16
+                        Y: =17
                         ZIndex: =1
 
                         CboxCCLSS As checkbox:
@@ -1073,7 +1144,7 @@ LeadSummaryScreen As screen:
                         Visible: =VarCommunication
                         Width: =Parent.Width
                         X: =0
-                        Y: =17
+                        Y: =18
                         ZIndex: =1
 
                         borderCustomerNameLSS As rectangle:
@@ -1137,7 +1208,7 @@ LeadSummaryScreen As screen:
                         Visible: =VarCommunicationSummary
                         Width: =Parent.Width
                         X: =0
-                        Y: =18
+                        Y: =19
                         ZIndex: =1
 
                         borderCustomerContactES_3 As rectangle:
@@ -1431,7 +1502,7 @@ LeadSummaryScreen As screen:
                         Update: =Safety_DataCard2.Default
                         Width: =Parent.Width
                         X: =0
-                        Y: =19
+                        Y: =20
                         ZIndex: =1
 
                         CboxSafety_1 As checkbox:
