--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -203,7 +203,7 @@ LeadSummaryScreen As screen:
                         Height: =50
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, 'shlrf_joborigin')
                         Required: =false
-                        Update: =DataCardValue1.Text
+                        Update: =cmbxJobOriginLSS.Selected.Value
                         Width: =Parent.Width
                         X: =0
                         Y: =6
@@ -218,24 +218,6 @@ LeadSummaryScreen As screen:
                             X: =30
                             Y: =10
                             ZIndex: =1
-
-                        DataCardValue1 As text:
-                            BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                            Default: =Parent.Default
-                            DelayOutput: =true
-                            DisplayMode: =Parent.DisplayMode
-                            MaxLength: =Parent.MaxLength
-                            PaddingLeft: =5
-                            RadiusBottomLeft: =0
-                            RadiusBottomRight: =0
-                            RadiusTopLeft: =0
-                            RadiusTopRight: =0
-                            Tooltip: =Parent.DisplayName
-                            Visible: =false
-                            Width: =Parent.Width - 60
-                            X: =30
-                            Y: =DataCardKey1.Y + DataCardKey1.Height + 5
-                            ZIndex: =2
 
                         cmbxJobOriginLSS As combobox:
                             BorderColor: =RGBA(202, 202, 202, 1)
@@ -2070,7 +2052,8 @@ LeadSummaryScreen As screen:
                                     TechnicianID: VarTechnicianID.'Personnel No',
                                     Area: VarTechnicianID.Area,
                                     Territory: VarTechnicianID.Territory,
-                                    District: VarTechnicianID.District
+                                    District: VarTechnicianID.District,
+                                    JobOrigin:cmbxJobOriginLSS.Selected.Value
                                 }
                             );
                             ForAll(
