--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -400,7 +400,7 @@ UnitScreen As screen:
                 AlignInContainer: =AlignInContainer.Center
                 DataSource: =LeadInformations
                 FillPortions: =0
-                Height: =If(UnitCount.Height+UnitDescription.Height=0,300,UnitCount.Height+UnitDescription.Height+JobOrigin_DataCard4.Height+40)
+                Height: =If(UnitCount.Height+UnitDescription.Height=0,300,UnitCount.Height+UnitDescription.Height+JobOrigin.Height+40)
                 Item: =VarFormMode
                 LayoutMinHeight: =250
                 LayoutMinWidth: =Parent.Width
@@ -408,7 +408,7 @@ UnitScreen As screen:
                 Y: =ctnUserHeaderUS.Height+ctnUserHeaderUS.Y+20
                 ZIndex: =3
 
-                JobOrigin_DataCard4 As typedDataCard.allowedValuesStringEditCard:
+                JobOrigin As typedDataCard.allowedValuesStringEditCard:
                     AllowedValues: =DataSourceInfo([@LeadInformations], DataSourceInfo.AllowedValues, 'shlrf_joborigin')
                     BorderColor: =RGBA(202, 202, 202, 1)
                     BorderStyle: =BorderStyle.Solid
@@ -419,13 +419,13 @@ UnitScreen As screen:
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =100
                     Required: =false
-                    Update: =DataCardValue4.Selected.Value
+                    Update: =cmbxJobOrigin.Selected.Value
                     Width: =Parent.Width
                     X: =1
                     Y: =1
                     ZIndex: =1
 
-                    DataCardKey4 As label:
+                    lblJobOrigin As label:
                         AutoHeight: =true
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =34
@@ -435,26 +435,6 @@ UnitScreen As screen:
                         X: =30
                         Y: =10
                         ZIndex: =1
-
-                    DataCardValue4 As dropdown:
-                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                        Default: =
-                        DisplayMode: =Parent.DisplayMode
-                        Height: =50
-                        Items: |-
-                            =[
-                                "Vandalism",
-                                "Power Disruption",
-                                "Water Intrusion",
-                                "Upgrade",
-                                "Obsolescence"
-                            ]
-                        Tooltip: =Parent.DisplayName
-                        Visible: =false
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =DataCardKey4.Y + DataCardKey4.Height + 5
-                        ZIndex: =2
 
                     cmbxJobOrigin As combobox:
                         BorderColor: =RGBA(202, 202, 202, 1)
