--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -199,6 +199,53 @@ ViewDetailsScreen As screen:
                 Y: =10
                 ZIndex: =1
 
+                JobOrigin_DataCard2 As typedDataCard.textualEditCard:
+                    BorderStyle: =BorderStyle.Solid
+                    DataField: ="shlrf_joborigin"
+                    Default: =ThisItem.JobOrigin
+                    DisplayMode: =Parent.DisplayMode
+                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,'shlrf_joborigin')
+                    Fill: =RGBA(0, 0, 0, 0)
+                    Height: =50
+                    MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, 'shlrf_joborigin')
+                    Required: =false
+                    Update: =DataCardValue2.Text
+                    Width: =Parent.Width
+                    X: =0
+                    Y: =7
+                    ZIndex: =1
+
+                    DataCardKey2 As label:
+                        AutoHeight: =true
+                        Color: =RGBA(0, 0, 0, 1)
+                        Font: =Font.Arial
+                        FontWeight: =FontWeight.Semibold
+                        Height: =34
+                        Size: =16
+                        Text: =Parent.DisplayName
+                        Width: =Parent.Width - 60
+                        Wrap: =false
+                        X: =30
+                        Y: =10
+                        ZIndex: =1
+
+                    DataCardValue2 As text:
+                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                        Default: =Parent.Default
+                        DelayOutput: =true
+                        DisplayMode: =Parent.DisplayMode
+                        MaxLength: =Parent.MaxLength
+                        PaddingLeft: =5
+                        RadiusBottomLeft: =0
+                        RadiusBottomRight: =0
+                        RadiusTopLeft: =0
+                        RadiusTopRight: =0
+                        Tooltip: =Parent.DisplayName
+                        Width: =Parent.Width - 60
+                        X: =30
+                        Y: =DataCardKey2.Y + DataCardKey2.Height + 5
+                        ZIndex: =2
+
                 LeadTrackingNumber_DataCard1 As typedDataCard.textualViewCard:
                     BorderColor: =RGBA(0, 0, 0, 1)
                     BorderStyle: =BorderStyle.Solid
@@ -601,7 +648,7 @@ ViewDetailsScreen As screen:
                     Update: =intxtPrimaryScopeofWorkLIDVDS.Selected
                     Width: =Parent.Width
                     X: =0
-                    Y: =7
+                    Y: =8
                     ZIndex: =1
 
                     lblPrimaryScopeofWorkLIDVDS As label:
@@ -651,7 +698,7 @@ ViewDetailsScreen As screen:
                     Update: =intxtSecondaryScopeofWorkLIDVDS.Selected
                     Width: =Parent.Width
                     X: =0
-                    Y: =8
+                    Y: =9
                     ZIndex: =1
 
                     lblSecondaryScopeofWorkLIDVDS As label:
@@ -704,7 +751,7 @@ ViewDetailsScreen As screen:
                     Visible: =If(IsBlank(ThisItem.CustomScopeofWork),false,true)
                     Width: =Parent.Width
                     X: =0
-                    Y: =9
+                    Y: =10
                     ZIndex: =1
 
                     lblManuallyScopeOfWorkVDS As label:
@@ -762,7 +809,7 @@ ViewDetailsScreen As screen:
                     Update: =intxtEstimatedHoursVDS.Text
                     Width: =Parent.Width
                     X: =0
-                    Y: =10
+                    Y: =11
                     ZIndex: =1
 
                     lblEstimatedHoursVDS As label:
@@ -822,7 +869,7 @@ ViewDetailsScreen As screen:
                     Visible: =If(IsBlank(ThisItem.Notes),false,true)
                     Width: =Parent.Width
                     X: =0
-                    Y: =11
+                    Y: =12
                     ZIndex: =1
 
                     lblMaterialVDS As label:
@@ -885,7 +932,7 @@ ViewDetailsScreen As screen:
                         If(ThisItem.IsUnitDown='IsUnitDown (LeadInformations)'.Yes,true,false)
                     Width: =Parent.Width
                     X: =0
-                    Y: =12
+                    Y: =13
                     ZIndex: =1
 
                     CboxUnitDownVDS As checkbox:
@@ -921,7 +968,7 @@ ViewDetailsScreen As screen:
                     Visible: =If(ThisItem.AdditionalExpensesRequired='AdditionalExpensesRequired (LeadInformations)'.Yes,true,false)
                     Width: =Parent.Width
                     X: =0
-                    Y: =13
+                    Y: =14
                     ZIndex: =1
 
                     cboxAdditionalExpensesRequiredVDS As checkbox:
@@ -957,7 +1004,7 @@ ViewDetailsScreen As screen:
                     Visible: =If(ThisItem.AdditionalExpensesRequired='AdditionalExpensesRequired (LeadInformations)'.Yes && !IsBlank(intxtTotalEstimatedExpenseVDS.Text),true,false)
                     Width: =Parent.Width
                     X: =0
-                    Y: =14
+                    Y: =15
                     ZIndex: =1
 
                     lblTotalEstimatedExpenseVDS As label:
@@ -1013,7 +1060,7 @@ ViewDetailsScreen As screen:
                         If(ThisItem.TravelRequired='TravelRequired (LeadInformations)'.Yes,true,false)
                     Width: =Parent.Width
                     X: =0
-                    Y: =15
+                    Y: =16
                     ZIndex: =1
 
                     cboxTravelRequiredVDS As checkbox:
@@ -1049,7 +1096,7 @@ ViewDetailsScreen As screen:
                     Visible: =If(ThisItem.TravelRequired='TravelRequired (LeadInformations)'.Yes && !IsBlank(intxtTotalEstimatedHoursofTravelVDS.Text),true,false)
                     Width: =Parent.Width
                     X: =0
-                    Y: =16
+                    Y: =17
                     ZIndex: =1
 
                     lblTotalEstimatedHoursofTravelVDS As label:
@@ -1104,7 +1151,7 @@ ViewDetailsScreen As screen:
                         If(ThisItem.CommunicatedToCustomer='CommunicatedToCustomer (LeadInformations)'.Yes,true,false)
                     Width: =Parent.Width
                     X: =0
-                    Y: =17
+                    Y: =18
                     ZIndex: =1
 
                     cboxTotalEstimatedHoursofTravelVDS As checkbox:
@@ -1141,7 +1188,7 @@ ViewDetailsScreen As screen:
                     Visible: =If(ThisItem.CommunicatedToCustomer='CommunicatedToCustomer (LeadInformations)'.Yes && !IsBlank(intxtCustomerNameVDS.Text),true,false)
                     Width: =Parent.Width
                     X: =0
-                    Y: =18
+                    Y: =19
                     ZIndex: =1
 
                     lblCustomerNameVDS As label:
@@ -1194,7 +1241,7 @@ ViewDetailsScreen As screen:
                     Visible: =If(ThisItem.CommunicatedToCustomer='CommunicatedToCustomer (LeadInformations)'.Yes && !IsBlank(intxtCustomerContactVDS.Text),true,false)
                     Width: =Parent.Width
                     X: =0
-                    Y: =19
+                    Y: =20
                     ZIndex: =1
 
                     lblCustomerContactVDS As label:
@@ -1245,7 +1292,7 @@ ViewDetailsScreen As screen:
                     Visible: =If(ThisItem.LeadStatus="Rejected",true,false)
                     Width: =Parent.Width
                     X: =0
-                    Y: =20
+                    Y: =21
                     ZIndex: =1
 
                     lblLeadCommentHeadingVDS As label:
@@ -1288,7 +1335,7 @@ ViewDetailsScreen As screen:
                     Update: =
                     Width: =Parent.Width
                     X: =0
-                    Y: =21
+                    Y: =22
                     ZIndex: =1
 
                     CboxSafetyVDS As checkbox:
