--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -428,7 +428,9 @@ UnitScreen As screen:
                     lblJobOrigin As label:
                         AutoHeight: =true
                         Color: =RGBA(0, 0, 0, 1)
+                        Font: =Font.Arial
                         Height: =34
+                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Text: ="Job Origin/Situation"
                         Width: =Parent.Width - 60
                         Wrap: =false
@@ -442,6 +444,7 @@ UnitScreen As screen:
                         ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
                         DefaultSelectedItems: =VarJobOrigin
                         DisplayFields: =["Value"]
+                        Font: =Font.Arial
                         HoverBorderColor: =//ColorFade(Self.BorderColor, 15%)
                         HoverFill: =RGBA(0, 0, 0, 0)
                         InputTextPlaceholder: ="Select Job Origin/Situation"
@@ -459,6 +462,7 @@ UnitScreen As screen:
                         SearchItems: =Search(["Vandalism","Power Disruption","Water Intrusion","Upgrade","Obsolescence"],cmbxJobOrigin.SearchText,Value)
                         SelectionFill: =RGBA(202, 202, 202, 1)
                         SelectMultiple: =false
+                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Tooltip: ="Select Job Origin/Situation"
                         Width: =Parent.Width-60
                         X: =30
