--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -670,12 +670,12 @@ CreatLeadScreen As screen:
                         ChevronBackground: =RGBA(202, 202, 202, 1)
                         ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
                         ChevronHoverFill: =RGBA(202, 202, 202, 1)
-                        Default: =First(VarBuildingList)
-                        DefaultSelectedItems: =First(VarBuildingList)
+                        Default: =First(LocalColContractData)
+                        DefaultSelectedItems: =First(LocalColContractData)
                         DisplayFields: =["cr02d_custname"]
                         Height: =50
                         HoverFill: =RGBA(0, 0, 0, 0)
-                        Items: =VarBuildingList
+                        Items: =LocalColContractData
                         PressedColor: =RGBA(202, 202, 202, 1)
                         PressedFill: =RGBA(202, 202, 202, 1)
                         SearchFields: =["cr02d_custname"]
