--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -657,7 +657,7 @@ CreatLeadScreen As screen:
                         Font: =Font.Arial
                         Height: =If(VarBuildingName,30,0)
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: ="Building Name "
+                        Text: ="Building Name " & CountRows(LocalColContractData)
                         Visible: =VarBuildingName || !IsBlank(IntxtBuildingName.Text)
                         Width: =Parent.Width - 50
                         Wrap: =false
