--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -670,16 +670,19 @@ CreatLeadScreen As screen:
                         ChevronBackground: =RGBA(202, 202, 202, 1)
                         ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
                         ChevronHoverFill: =RGBA(202, 202, 202, 1)
-                        Default: =First(LocalColContractData)
-                        DefaultSelectedItems: =First(LocalColContractData)
+                        Default: =//LocalColContractData
+                        DefaultSelectedItems: =LocalColContractData
                         DisplayFields: =["cr02d_custname"]
                         Height: =50
                         HoverFill: =RGBA(0, 0, 0, 0)
-                        Items: =LocalColContractData
+                        Items: |-
+                            =Filter(
+                                    SHContractDetails,Contr_dist=VarTechnicianID.District &&
+                                    CONTR_NUM = IntxtContractNumber.Text)
                         PressedColor: =RGBA(202, 202, 202, 1)
                         PressedFill: =RGBA(202, 202, 202, 1)
                         SearchFields: =["cr02d_custname"]
-                        SearchItems: =Search(SHContractDetails,cmbxBuildingName.SearchText,cr02d_custname)
+                        SearchItems: =Search(Filter(SHContractDetails,Contr_dist=VarTechnicianID.District&&CONTR_NUM=IntxtContractNumber.Text),cmbxBuildingName.SearchText,cr02d_custname)
                         SelectionFill: =RGBA(202, 202, 202, 1)
                         SelectMultiple: =false
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
