--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -5,7 +5,7 @@
       "DataflowAnalysisEnabled": false,
       "DataflowAnalysisFlagStateToggledByUser": false
     },
-    "DocVersion": "1.343",
+    "DocVersion": "1.345",
     "MinVersionToLoad": "1.331",
     "MSAppStructureVersion": "2.0"
   },
@@ -33,6 +33,7 @@
       "disablebehaviorreturntypecheck": false,
       "disablecdsfileandlargeimage": false,
       "disabledeferloadingunusedscreenswithstartscreen": false,
+      "disablefallbacktopayamlv2": false,
       "disableloadcomponentdefinitionsondemand": false,
       "disableruntimepolicies": false,
       "dynamicschema": false,
@@ -70,7 +71,6 @@
       "improvedtabstopbehavior": false,
       "isemptyrequirestableargument": true,
       "keeprecentscreensloaded": true,
-      "legacyformulabar": false,
       "longlivingcache": false,
       "mobilenativerendering": false,
       "nativecdsexperimental": true,
@@ -108,6 +108,7 @@
     },
     "Author": "",
     "BindingErrorCount": 0,
+    "ConnectionString": "",
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 2000,
     "DocumentAppType": "DesktopOrTablet",
@@ -121,7 +122,6 @@
     "EnableInstrumentation": false,
     "FileID": "59aed44c-4fbe-4a63-8bbc-6e4d025e5951",
     "Id": "9d662df8-091d-4444-8272-05db92ce280a",
-    "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
     "Name": "SEC Lead Generation App QUAL",
     "OriginatingVersion": "1.331",
