--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -589,12 +589,16 @@ UnitScreen As screen:
                                 "Upgrade",
                                 "Obsolescence"
                             ]
-                        OnChange: =Set(VarJobOrigin,cmbxJobOrigin.SelectedItems);
+                        OnChange: |-
+                            =If( CountRows(cmbxJobOrigin.SelectedItems) > 2, 
+                                Notify("You can select up to 2 items only!", NotificationType.Error); 
+                                Reset(cmbxJobOrigin)
+                            );
+                            Set(VarJobOrigin,cmbxJobOrigin.SelectedItems);
                         PressedFill: =RGBA(202, 202, 202, 1)
                         SearchFields: =["Value"]
                         SearchItems: =Search(["Vandalism","Power Disruption","Water Intrusion","Upgrade","Obsolescence"],cmbxJobOrigin.SearchText,Value)
                         SelectionFill: =RGBA(202, 202, 202, 1)
-                        SelectMultiple: =false
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Tooltip: ="Select Job Origin/Situation"
                         Width: =Parent.Width-60
